Added ta bort och redigera

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "dnd-kit": "^0.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.7.1",
