--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "firebase": "^11.7.1",
     "multer": "^1.4.5-lts.2",
     "next": "^15.3.2",
+    "next-view-transitions": "^0.3.4",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.5",
     "web-vitals": "^2.1.4"
   },
