--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apideck/better-ajv-errors": "^0.3.6",
     "@cloudinary/react": "^1.14.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@deemlol/next-icons": "^0.1.9",
+    "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
@@ -27,10 +30,9 @@
     "firebase": "^11.7.1",
     "multer": "^1.4.5-lts.2",
     "next": "^15.3.2",
-    "next-view-transitions": "^0.3.4",
     "postcss": "^8.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.5",
